kubernetes/apps/networking/emby/ingress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emby
  namespace: networking
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: emby
      protocol: TCP
      port: 8096
      targetPort: emby
